<resources>
    <string name="Title_Advanced_Recording_Options">Advancd recording options</string>
    <string name="Title_AutoHDR">Auto HDR</string>
    <string name="Title_Camcorder_HDR10">HDR10+ videos</string>
    <string name="Title_Camcorder_HEVC">High efficiency videos</string>
    <string name="Title_Camcorder_Zoom_In_Mic">Zoom-in mic</string>
    <string name="Title_Contact_us">Contact us</string>
    <string name="Title_Customization_Service">Customization Service</string>
    <string name="Title_FloatingCameraButton">Floating Shutter button</string>
    <string name="Title_Guideline">Grid lines</string>
    <string name="Title_HDR">HDR (Rich tone)</string>
    <string name="Title_HRM_shutter">Tap heart rate sensor</string>
    <string name="Title_Heif">HEIF pictures</string>
    <string name="Title_HighEfficiencyRaw">High efficiency RAW</string>
    <string name="Title_KeepCameraMode">Camera mode</string>
    <string name="Title_KeepFilters">Filters</string>
    <string name="Title_KeepSelfieAngle">Selfie angle</string>
    <string name="Title_LocationTag">Location tags</string>
    <string name="Title_Permissions">Permissions</string>
    <string name="Title_PicturesAsPreviewed">Save selfies as previewed</string>
    <string name="Title_QRCode">Scan QR codes</string>
    <string name="Title_QuickShot">Quick launch</string>
    <string name="Title_Raw_File">RAW copies</string>
    <string name="Title_Review">Quick review</string>
    <string name="Title_SaveOptions">Format and advanced options</string>
    <string name="Title_SceneOptimizer">Scene optimizer</string>
    <string name="Title_Selfie_Tone">Tone</string>
    <string name="Title_SettingsToKeep">Settings to keep</string>
    <string name="Title_ShootingMethod">Shooting Methods</string>
    <string name="Title_ShowPalm">Show palm</string>
    <string name="Title_ShutterSound">Shutter sound</string>
    <string name="Title_Storage">Storage location</string>
    <string name="Title_SwipeShutterTo">Swipe Shutter button to</string>
    <string name="Title_Tap_To_Take_Pictures">Tap screen</string>
    <string name="Title_TouchVibrations">Vibration feedback</string>
    <string name="Title_TrackingAF">Tracking auto-focus</string>
    <string name="Title_Ultra_Wide_Picture">Ultra wide picture (Live Focus)</string>
    <string name="Title_Ultra_wide_lens_correction">Ultra wide shape correction</string>
    <string name="Title_VideoStabilisation">Video stabilisation</string>
    <string name="Title_Viewmode">Full screen view (16:9)</string>
    <string name="Title_Voice_Capture">Voice control</string>
    <string name="Title_Volume_Key_As">Press Volume keys to</string>
    <string name="Title_capture_more_with_wider_lens">Capture more with a wider lens</string>
    <string name="Title_composition_guide">Shot suggestions</string>
    <string name="Title_do_more_while_recording">Do more while recording</string>
    <string name="Title_how_to_use">How to use</string>
    <string name="Title_keep_the_shutter_button">Keep the Shutter button within reach</string>
    <string name="Title_photograph_your_world">Photograph your world, top to bottom</string>
    <string name="Title_pictures">Pictures</string>
    <string name="Title_privacy">Privacy</string>
    <string name="Title_scan_qr_codes">Scan QR codes</string>
    <string name="Title_selfies">Selfies</string>
    <string name="Title_smart_selfie_angle">Smart selfie angle</string>
    <string name="Title_take_hands_free_selfies">Take hands-free selfies</string>
    <string name="Title_useful_features">General</string>
    <string name="Title_videos">Videos</string>
    <string name="ble_spen_do_nothing">Do nothing</string>
    <string name="ble_spen_narrower_angle_of_view">Zoom in/Decrease angle view</string>
    <string name="ble_spen_wider_angle_of_view">Zoom out/Increase angle view</string>
    <string name="camcorder_HDR10_summary">Optimize the contrast and color in each scene by recording in HDR10+. A supported device is needed to play HDR10+ videos correctly.</string>
    <string name="camcorder_front_HEVC_summary">Record videos in HEVC format to save space. You may not be able to play HEVC videos on other devices or share them online.</string>
    <string name="camcorder_zoom_in_mic_summary">Match the mic zoom to the camera zoom while recording videos.</string>
    <string name="capture_more_with_wider_lens_description">Get the widest possible view of each scene by using the Ultra wide lens button. You can also use the lens buttons for fine control of the zoom.</string>
    <string name="composition_guide_summary">Get on-screen guides to help you line up great shots.</string>
    <string name="customization_service_summary">Get personalized content based on how you use your phone.</string>
    <string name="dep_empty">empty</string>
    <string name="dep_etc">etc</string>
    <string name="dep_intelligence">intelligence</string>
    <string name="dep_pictures">pictures</string>
    <string name="dep_privacy">privacy</string>
    <string name="dep_selfie">selfie_features</string>
    <string name="dep_useful_features">useful_features</string>
    <string name="dep_videos">videos</string>
    <string name="do_more_while_recording_description">Pause and resume recording or take pictures without interrupting your videos.</string>
    <string name="flaw_detection_device_shake_3">That shot might have come out a little blurry.</string>
    <string name="floating_camera_button">Add an extra Shutter button you can move anywhere on the screen.</string>
    <string name="hdr_apply_setting_description">Make your pictures pop by capturing more detail in the bright and dark areas of your shots.</string>
    <string name="heif_format_summary">"In Photo mode, save space by capturing pictures in high efficiency image format (HEIF). Some apps and sites don't support this format."</string>
    <string name="high_efficiency_raw_summary">Save space by capturing RAW pictures in high efficiency format.</string>
    <string name="hrm_shutter_summary">Tap the heart rate sensor to take a selfie.</string>
    <string name="keep_camera_mode_summary">Start Camera in the last used mode, such as Video, instead of always starting in Photo mode.</string>
    <string name="keep_filters_summary">"Keep the filters you've applied to each mode instead of removing them when you close Camera."</string>
    <string name="keep_selfie_angle_summary">Keep the angle you last used for the front camera instead of always switching back to normal angle.</string>
    <string name="keep_the_shutter_button_description">"Add an extra Shutter button you can move anywhere on the screen so you can reach it with either hand. Hide it when you don't need it."</string>
    <string name="key_about_camera">about_camera</string>
    <string name="key_advanced_recording_options">advanced_recording_options</string>
    <string name="key_capture_more_with_wider_lens">capture_more_with_wider_lens</string>
    <string name="key_composition_guide">composition_guide</string>
    <string name="key_contact_us">contact_us</string>
    <string name="key_customization_service">customization_service</string>
    <string name="key_dng_compression">dng_compression</string>
    <string name="key_do_more_while_recording">do_more_while_recording</string>
    <string name="key_dual_capture_in_live_focus">dual_capture_in_live_focus</string>
    <string name="key_floating_camera_button">floating_camera_button</string>
    <string name="key_guide_line">guide_line</string>
    <string name="key_hdr10_recording">hdr10_recording</string>
    <string name="key_hdr_enabled">hdr_enabled</string>
    <string name="key_heif">heif</string>
    <string name="key_hevc">hevc</string>
    <string name="key_hold_camera_button_to">hold_camera_button_to</string>
    <string name="key_how_to_use">how_to_use</string>
    <string name="key_hrm_shutter">hrm_shutter</string>
    <string name="key_keep_camera_mode">keep_camera_mode</string>
    <string name="key_keep_filters">keep_filters</string>
    <string name="key_keep_selfie_angle">keep_selfie_angle</string>
    <string name="key_keep_the_shutter_button">keep_the_shutter_button</string>
    <string name="key_location_tag">location_tag</string>
    <string name="key_palm_detection">palm_detection</string>
    <string name="key_permissions">permissions</string>
    <string name="key_photograph_your_world">photograph_your_world</string>
    <string name="key_picture_format">picture_format</string>
    <string name="key_qr_code_detection">qr_code_detection</string>
    <string name="key_quick_launch">quick_launch</string>
    <string name="key_reset_settings">reset_settings</string>
    <string name="key_review">review</string>
    <string name="key_save_as_flipped">save_as_flipped</string>
    <string name="key_save_options">save_options</string>
    <string name="key_scan_qr_codes">scan_qr_codes</string>
    <string name="key_scene_optimizer">scene_optimizer</string>
    <string name="key_selfie_tone">selfie_tone_mode</string>
    <string name="key_settings_to_keep">settings_to_keep</string>
    <string name="key_shooting_method">shooting_method</string>
    <string name="key_shutter_sound">shutter_sound</string>
    <string name="key_smart_selfie_angle">smart_selfie_angle</string>
    <string name="key_storage">storage</string>
    <string name="key_take_hands_free_selfies">take_hands_free_selfies</string>
    <string name="key_tap_to_take_pictures">tap_to_take_pictures</string>
    <string name="key_touch_vibrations">touch_vibrations</string>
    <string name="key_tracking_af">tracking_af</string>
    <string name="key_video_stabilisation">video_stabilisation</string>
    <string name="key_view_mode">view_mode</string>
    <string name="key_voice_control">voice_control</string>
    <string name="key_volume_key_to">volume_key_to</string>
    <string name="key_wide_lens_correction">wide_lens_correction</string>
    <string name="key_zoom_in_mic">zoom_in_mic</string>
    <string name="location_tag_summary">Add tags to your pictures and videos so you can see where they were taken.</string>
    <string name="okay">OK</string>
    <string name="photograph_your_world_description">See something tall? Pan the camera up or down to take a vertical panorama.</string>
    <string name="picture_format_summary">Save JPEG and RAW copies of pictures taken in Pro mode.</string>
    <string name="pictures_as_previewed_summary">Save selfies as they appear in the preview without flipping them.</string>
    <string name="reset_title">Reset settings</string>
    <string name="scan_qr_codes_description">Just point your camera at QR codes to add contacts, go to webpages, add calendar events, and more. You can also open the QR scanner in the quick panel.</string>
    <string name="scene_optimizer_summary">Automatically optimize your shots for the scene.</string>
    <string name="show_palm_summary">Show your palm to the camera to take a selfie or start recording with the front camera.</string>
    <string name="smart_selfie_angle_description">Automatically switch to wide-angle when there are 2 or more people in the selfie.</string>
    <string name="take_hands_free_selfies_description">Hold up your palm to take a selfie without touching your phone.</string>
    <string name="take_picture_button">Take picture</string>
    <string name="tap_to_take_pictures_summary">Tap the screen to take selfies</string>
    <string name="tracking_af_summary">Keep the camera focused on the selected subject even if they move.</string>
    <string name="turnon_btn">Turn on</string>
    <string name="ultra_wide_lens_correction_summary">Automatically correct distortion in pictures taken with the ultra wide lens.</string>
    <string name="ultra_wide_picture_summary">Also save an ultra wide-angle copy of each Live focus picture.</string>
    <string name="viewmode_tag_summary">Preview pictures and videos using the full screen.</string>
</resources>