<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/intelligent_tips_view_group" android:tag="layout/popup_intelligent_tips_0" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layoutDirection="locale"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <Button android:textStyle="bold" android:textColor="@color/white_color" android:id="@id/text_button" android:background="@android:color/transparent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/turnon_btn" android:contentDescription="@string/okay" android:textAllCaps="true" android:fontFamily="sans-serif-condensed" app:layout_constraintEnd_toEndOf="@id/description" app:layout_constraintTop_toBottomOf="@id/description" />
    <TextView android:textSize="@dimen/intelligent_tips_description_font_size" android:textColor="@color/white_color" android:id="@id/description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/flaw_detection_device_shake_3" app:layout_constraintBottom_toTopOf="@id/text_button" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/RobotoRegular" />
</androidx.constraintlayout.widget.ConstraintLayout>